update: index.html (lists)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,40 @@
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
 
+    <hr>
 
+    <h2>@lists</h2>
+
+    <h3>unordered list</h3>
+    <p>(if) We don't want to show bullets in unordered list. We'll remove that in CSS. </p>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+
+    <h3>unordered inline list</h3>
+    <p>instead of going into new row for each item, it'll take the same row with different columns.</p>
+
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+
+    <h3>reverse ordered list</h3>
+
+    <ol>
+        <li>table</li>
+        <li>fan</li>
+        <li>wall</li>
+    </ol>
+
+    <hr>
+
+    <h2>@nav</h2>
+
+    
 
 
 
