--- a/index.html
+++ b/index.html
@@ -71,7 +71,22 @@
 
     <h2>@nav</h2>
 
-    
+    <nav>
+        <div>iAmBrandName</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">products</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
 
 
 
