--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
 
     <hr>
 
+    <h3>@header</h3>
 
+    <header>
+        <img src="images/hero-image2.svg" />
+        <h1>heading inside hero</h1>
+    </header>
 
 
 </body>
