update:index.html (sections and footer)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <hr>
 
     <h2>@nav</h2>
+    <p>Navigation is used on the top of the page and used to get to different pages</p>
 
     <nav>
         <div>iAmBrandName</div>
@@ -94,6 +95,36 @@
         <img src="images/hero-image2.svg" />
         <h1>heading inside hero</h1>
     </header>
+
+    <hr>
+
+    <h2>@sections</h2>
+    <p>Sections are used to separate parts of a page</p>
+    
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background.</p>
+    </section>
+
+    <section>
+        <h3>off white section</h3>
+        <p>This will gray background.</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>Social One</li>
+            <li>Social Two</li>
+            <li>Social Three</li>
+        </ul>
+    </footer>
+
+
 
 
 </body>
