--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <h3>unordered list</h3>
     <p>(if) We don't want to show bullets in unordered list. We'll remove that in CSS. </p>
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -58,16 +58,16 @@
     <h3>unordered inline list</h3>
     <p>instead of going into new row for each item, it'll take the same row with different columns.</p>
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet ">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3>reverse ordered list</h3>
     <p>counting will go reverse for this list</p>
 
-    <ol>
+    <ol reversed>
         <li>table</li>
         <li>fan</li>
         <li>wall</li>
