--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h3>unordered inline list</h3>
     <p>instead of going into new row for each item, it'll take the same row with different columns.</p>
 
-    <ul class="list-non-bullet ">
+    <ul class="list-non-bullet">
         <li class="list-item-inline">Inline Item One</li>
         <li class="list-item-inline">Inline Item Two</li>
         <li class="list-item-inline">Inline Item Three</li>
@@ -78,17 +78,17 @@
     <h2>@nav</h2>
     <p>Navigation is used on the top of the page and used to get to different pages</p>
 
-    <nav>
-        <div>iAmBrandName</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">iAmBrandName</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
             </li>
-            <li>
-                <a href="/">products</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">products</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">about</a>
             </li>
         </ul>
     </nav>
