--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
     <h3>@header</h3>
 
-    <header>
-        <img src="images/hero-image2.svg" />
-        <h1>heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-image" src="images/hero-image2.svg" />
+        <h1 class="hero-heading">Taha Bagwala <span class="header-inverted">the web developer</span></h1>
     </header>
 
     <hr>
